# matrix_reader

./: .travis.yml  CMakeLists.txt  README.md
include/: matrix_market_reader.h
src/: matrix_market_reader.cpp
tests/: CMakeLists.txt  matrix_market_test.cpp
